Changed the transform of Right Image

--- a/style.css
+++ b/style.css
@@ -188,11 +188,11 @@ body{
 @keyframes fadeInRight{
     0%{
         opacity: 0;
-        -webkit-transform: translateX(200px);
+        transform: translateX(-100px);
     }
     100%{
         opacity: 1;
-        -webkit-transform: translateX(0px);
+        transform: translateX(0px);
     }
 }
 .rightSide img{
