--- a/style.css
+++ b/style.css
@@ -1407,6 +1407,7 @@ details[open] summary{
     }
     .matter{
         width: 300px;
+        color: #707070;
     }
     .aboutImages{
         width: 300px;
