--- a/style.css
+++ b/style.css
@@ -1408,6 +1408,7 @@ details[open] summary{
     .matter{
         width: 300px;
         color: #707070;
+        font-weight: 600;
     }
     .aboutImages{
         width: 300px;
